Fixed horizontal scroll bug in large display

--- a/src/sections/frequently-asked/styles.scss
+++ b/src/sections/frequently-asked/styles.scss
@@ -5,6 +5,8 @@
   @extend %container;
   padding-top: $containerPadding*2;
   padding-bottom: $containerPadding*5;
+  position: relative;
+  overflow: hidden;
   @media (max-width: 430px) {
     display: none;
     &.open {
@@ -42,7 +44,7 @@
   .watermark {
     position: absolute;
     right: - calc($containerPadding/4);
-    bottom: $containerPadding;
+    bottom: $containerPadding*1.5;
     z-index: -1;
   }
 }
