--- a/src/sections/speakers/components/speakerDetails.scss
+++ b/src/sections/speakers/components/speakerDetails.scss
@@ -11,8 +11,10 @@
   background-color: white;
   transition: right 0.5s ease-in-out;
   overflow-y: auto;
+  visibility: hidden;
   &.open {
     right: 0;
+    visibility: visible;
   }
 }
 
